# mipt

Algorithms & OOP/Semester 1/Lab 1/: Binomial.cpp  Brackets.cpp  Bubble_Sort.cpp  Deque.cpp  Double.cpp  Fibonacci.cpp  Heap.cpp  Quick_Sort.cpp  Quick_Sort_2.cpp
Algorithms & OOP/Semester 1/Lab 2/: Football_Team.cpp  LCA.cpp  LCA_STL.cpp  LCS.cpp  LIS.cpp  Notebook.cpp  RMQ.cpp  Segment_Cover.cpp
Algorithms & OOP/Semester 1/Lab 3/: Arbitrage.cpp  Correct_Dictionary.cpp  Labyrinth.cpp
Algorithms & OOP/Semester 3/: 1_cycle.cpp  2_scc.cpp  2_scc_single_pass.cpp  5_johnson.cpp  6_order.cpp  7_boruvka.cpp  edge_iterator.h  graph.h  heap.h  vertex_iterator.h
Algorithms & OOP/Semester 3/test1/: test  test2
Algorithms & OOP/Semester 3/test2/: graph.txt
Algorithms & OOP/Semester 3/test3/: test2
Algorithms & OOP/Semester 3/test5/: test
Algorithms & OOP/Semester 3/test6/: test
Algorithms & OOP/Semester 4/: bktree.cpp  bwt.cpp  damerau-levenstein.cpp  fenwick.cpp  find_one_mistake.cpp  kmp.cpp  sms.cpp  theory  words
Algorithms & OOP/etc/planets/: planets.cpp  vector2f.cpp
Algorithms & OOP/etc/tamagochi/: tamagochi.h
Coding Theory/: output.txt
Computational Maths/Lab 1/: diff.cpp  square_interpolation.cpp
Computational Maths/Lab 2/: spline_correct.cpp
Computational Maths/Lab 3/: linear_system.cpp
Computational Maths/etc/Lagrunge/: data.tsv  interpol.cpp
Computational Maths/etc/Tridiagonal/: input1  input2
Formal Grammars/Lab 1/: rlg2nfa.rb
Formal Grammars/Lab 2/: compile  misc.c  oberon.y  prog1
Functional Programming/: 1.1.fs  1.2.fs  2.fs  3.fs
Groups Theory/: bitarray.cpp  bitarray.h  factorial.cpp  input.12  queue.h  report.tex
Machine Learning/knn/: knn.r  train.csv
Machine Learning/nda/: podst.r  train.csv
Machine Learning/svm/: sur.rb
Machine Learning/task_2/feature construction/: diapazones_german  neg inf
Operating Systems/Lab 1/: 01_parser.c  03_long_ariphmetics.c
Parallel Programming/: MatrixMultiplicationGroup.cc
Testing/triangle/: tests
Testing/web-testing/: input.csv  logins.csv
code/algorithms_oop/etc/planets/: planets.cpp  vector2f.cpp
code/algorithms_oop/etc/tamagochi/: tamagochi.cpp  tamagochi.h
code/algorithms_oop/semester_1/lab_1/: Binomial.cpp  Brackets.cpp  Bubble_Sort.cpp  Deque.cpp  Double.cpp  Fibonacci.cpp  Heap.cpp  Quick_Sort.cpp  Quick_Sort_2.cpp
code/algorithms_oop/semester_1/lab_2/: Football_Team.cpp  LCA.cpp  LCA_STL.cpp  LCS.cpp  LIS.cpp  Notebook.cpp  RMQ.cpp  Segment_Cover.cpp
code/algorithms_oop/semester_1/lab_3/: Arbitrage.cpp  Correct_Dictionary.cpp  Labyrinth.cpp
code/algorithms_oop/semester_2/ants/: Makefile  ants.cpp  ants.h  draw.cpp  draw.h  main.cpp
code/algorithms_oop/semester_3/: 0_bfs.cpp  1_cycle.cpp  2_scc.cpp  2_scc_single_pass.cpp  3_1k_min_edges.cpp  5_johnson.cpp  6_order.cpp  7_boruvka.cpp  dsu.h  edge_iterator.h  graph.h  heap.h  vertex_iterator.h
code/algorithms_oop/semester_3/test2/: test  test2  test3  test4
code/algorithms_oop/semester_3/test3/: test1  test3  test4
code/algorithms_oop/semester_3/test5/: test2
code/algorithms_oop/semester_3/test7/: graph
code/algorithms_oop/semester_4/: 01_kmp.cpp  02_one_typo.cpp  03_theory  04_sms.cpp  05_bktree.cpp  05_damerau_levenstein.cpp  06_bwt.cpp  07_fenvick.cpp  z_function.rb
code/coding_theory/: ambiguous_decoding.py  ambiguous_decoding.rb  input.txt
code/computational_maths/etc/boundary_problem/: boundary.cpp
code/computational_maths/etc/lagrunge/: interpol.cpp  interpol.rb
code/computational_maths/etc/ode/: odeivp.cpp
code/computational_maths/etc/runge-kutta/: solve.cpp
code/computational_maths/etc/tridiagonal/: tridiagonal.cpp
code/computational_maths/lab_1/: diff_2.cpp  square_interpolation.cpp
code/computational_maths/lab_2/: spline.cpp  spline_correct.cpp
code/computational_maths/lab_3/: linear_system.cpp
code/dynamic_systems/: generate_data.rb
code/formal_grammars/lab_1/: test
code/formal_grammars/lab_2/: help.c  help.h  misc.c  oberon.l  oberon.y
code/functional_programming/: 1.1.fs  1.2.fs  2.fs  3.fs
code/graphics/cylinder/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonMaterial.cpp  CommonMaterial.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Navigation.cpp  Program.cpp  SkyBoxMaterial.cpp  SkyBoxMaterial.h  Texture.cpp  Texture.h
code/graphics/cylinder/shaders/: common.frag  common.vert
code/graphics/dodecahedron/source/: CMakeLists.txt  application.cpp  application.h  camera.cpp  common_material.h  material.h  mesh.cpp  mesh.h  navigation.cpp  program.cpp
code/graphics/random_terrain/source/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  common_material.cpp  material.cpp  mesh.cpp  mesh.h  texture.cpp  texture.h
code/groups_theory/: Makefile  bitarray.cpp  bitarray.h  factorial.cpp  factorial.h  input.6  input.9  main.cpp  permutation.cpp  permutation.h  queue.h  report.tex  task.h
code/machine_learning/ada_boost/: ada_boost.cpp  ada_boost.rb
code/machine_learning/knn/: test.csv
code/machine_learning/lars/: solution.r
code/machine_learning/nda/: train.csv
code/machine_learning/svm/: sur.rb
code/machine_learning/task_2/feature_construction/: features.rb  neg_stat  pos_inf  pos_stat
code/operating_systems/lab_1/: bigint.c  bigint.h  long_ariphmetics.c  parser.c
code/operating_systems/lab_2/: longstring.h  lsof.c  realpath.c
code/parallel_programming/: matrix_mult.cc  matrix_mult_group.cc
code/testing/triangle/: run.rb
code/testing/web-testing/: login.rb  test.rb
code/uml/: report.doc
diplomas/bachelor/: Bakalavr-feedback-Sandler.doc
diplomas/masters/RedSphere/: CMakeLists.txt  Manipulator.cpp  Manipulator.h  Program.cpp
diplomas/masters/RedSphere/CMakeModules/: FindSoundModules.cmake  FindVRPN.cmake
diplomas/masters/TrackAnalyzer/: CMakeLists.txt
diplomas/masters/TrackAnalyzer/headers/: gplotter.h  helpers.h  track_analyzer.h  track_params.h
diplomas/masters/TrackAnalyzer/sources/: gplotter.cpp  helpers.cpp  main.cpp  track_analyzer.cpp  track_params.cpp
(+114 files in other folders)
